k8s/apps/gearhawk/api-gearhawk-dev/internal-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-gearhawk-internal
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - api-dev.gearhawk.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api-gearhawk-svc
          port: 80
